--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
         </div>
       </div>
     </div>
+
+
+    <footer class="footer mt-auto py-3">
+      <div class="container">
+        <span class="text-muted">Place sticky footer content here.</span>
+      </div>
+    </footer>
  
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
